--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,12 @@ body{
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currentlyz*/
   overflow: hidden;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-left: -960px;
-  margin-top: -540px;
-  width: 1920px;
+  width: 1620px;
   height: 1080px;
-  transform-origin: 50% 50%;
   background: #1b2b4b; /* Old browsers */
-  background: linear-gradient(to bottom, #1b2b4b 0%,#8ba5c3 100%);
+  background: linear-gradient(to bottom, #ff8c3d 0%,#ffb584 100%);
+  transform: scale(.42);
+  transform-origin: top left;
 }
 
 #content-container{
