--- a/css/amazing.css
+++ b/css/amazing.css
@@ -18,6 +18,7 @@
   overflow: hidden;
   transform: translateY(-50%);
   transition: width 300ms 500ms linear, opacity 300ms 500ms;
+  white-space: nowrap;
 }
 
 #amazing-logo{
